--- a/06-Probability.Rmd
+++ b/06-Probability.Rmd
@@ -31,7 +31,9 @@ La teoría de probabilidad es la rama de las matemáticas que trata con el azar 
 ## ¿Qué es la probabilidad?
 
 <!-- Informally, we usually think of probability as a number that describes the likelihood of some event occurring, which ranges from zero (impossibility) to one (certainty).  Sometimes probabilities will instead be expressed in percentages, which range from zero to one hundred, as when the weather forecast predicts a twenty percent chance of rain today.  In each case, these numbers are expressing how likely that particular event is, ranging from absolutely impossible to absolutely certain. -->
-De manera informal, usualmente pensamos a la probabilidad (*probability*) como el número que describe la probabilidad (*likelihood*) de que un evento ocurra, que va de un rango desde cero (imposibilidad) a uno (certeza). A veces las probabilidades se expresarán en porcentajes, que van de un rango de cero a cien, como cuando en el pronóstico del tiempo se predice que hay un veinte por ciento de probabilidad de lluvia para hoy. En cada caso, estos números expresan qué tan probable es que suceda un evento en particular, desde la absoluta imposibilidad hasta la absoluta certeza.
+De manera informal, usualmente pensamos a la probabilidad (*probability*) como el número que describe la verosimilitud o probabilidad (*likelihood*) de que un evento ocurra, que va de un rango desde cero (imposibilidad) a uno (certeza). A veces las probabilidades se expresarán en porcentajes, que van de un rango de cero a cien, como cuando en el pronóstico del tiempo se predice que hay un veinte por ciento de probabilidad de lluvia para hoy. En cada caso, estos números expresan qué tan probable es que suceda un evento en particular, desde la absoluta imposibilidad hasta la absoluta certeza.
+
+**Nota de traducción:** En términos informales, en inglés es común diferenciar entre *probabilidad* y *verosimilitud* (*likelihood*), pero en español esto no es común. Para esta traducción, hemos decidido usar el término "probabilidad" de manera indistinta en español, pero marcando entre paréntesis cuando esa probabilidad en específico se refiere a la verosimilitud, por ejemplo: "(*likelihood*)". La diferencia clave entre probabilidad y verosimilitud depende de sobre qué estamos condicionando el valor a estimar o calcular. En el caso de *probabilidad*, condicionamos sobre una distribución en particular, por lo que estimamos la *probabilidad* de observar un dato aleatorio condicionado a que provenga de una distribución en particular. Esto se escribiría como $P(dato | distribución)$. En el caso de *verosimilitud*, condicionamos sobre un dato en particular ya observado: por lo que estimamos la *verosimilitud* de una distribución condicionado a que ya observamos ese dato específico. Esto se escribiría como $L(distribución | dato)$. En la mayoría de las ocasiones en este libro, la verosimilitud se puede estimar con la probabilidad inversa: $P(dato | distribución)$, pero esto puede variar en ejemplos más complejos. Para una explicación breve sobre esto, puedes revisar el video de StatQuest ["Probability is not Likelihood. Find out why!"](https://www.youtube.com/watch?v=pYxNSUDSFH4).
 
 <!-- To formalize probability theory, we first need to define a few terms: -->
 Para formalizar la teoría de probabilidad, primero necesitamos definar algunos términos:
@@ -41,7 +43,7 @@ Para formalizar la teoría de probabilidad, primero necesitamos definar algunos 
 <!-- - The **sample space** is the set of possible outcomes for an experiment.  We represent these by listing them within a set of squiggly brackets. For a coin flip, the sample space is {heads, tails}.  For a six-sided die, the sample space is each of the possible numbers that can appear: {1,2,3,4,5,6}.  For the amount of time it takes to get to work, the sample space is all possible real numbers greater than zero (since it can't take a negative amount of time to get somewhere, at least not yet). We won't bother trying to write out all of those numbers within the brackets. -->
 - El **espacio muestral** es el conjunto de posibles resultados de un experimento. Los representamos enlistándolos dentro de un par de llaves ( {} ). En el caso de un lanzamiento de moneda, el espacio muestral es {cara, cruz}. En el caso de un dado de seis lados, el espacio muestral es cada uno de los posibles números que pueden aparecer: {1,2,3,4,5,6}. Para el tiempo que toma llegar al trabajo, el espacio muestral son todos los posibles números reales mayores a cero (porque no se puede llegar a algún lugar en un tiempo negativo, al menos aún no se puede). No nos preocuparemos en tratar de escribir todos esos números entre las llaves.
 <!-- - An **event** is a subset of the sample space.  In principle it could be one or more of possible outcomes in the sample space, but here we will focus primarily on *elementary events* which consist of exactly one possible outcome.  For example, this could be obtaining heads in a single coin flip, rolling a 4 on a throw of the die, or taking 21 minutes to get home by the new route. -->
-- Un **evento** es un subconjunto del espacio muestral. En principio puede ser uno o más de los posibles resultados en el espacio muestral, pero aquí nos enfocaremos principalmente en *eventos elementales* que consisten en exactamente un solo posible resultado. Por ejemplo, esto podría ser el obtener cara en un solo lanzamiento de moneda, sacar un 4 en un lanzamiento de dado, o tardar 21 minutos en llegar a casa en la nueva ruta.
+- Un **evento** es un subconjunto del espacio muestral. En principio puede ser uno o más de los posibles resultados en el espacio muestral, pero aquí nos enfocaremos principalmente en *eventos simples* que consisten en exactamente un solo posible resultado (**Nota de traducción**: lo más común es que se les llame "eventos simples", pero también es muy común llamarles "eventos elementales", o "suceso simple/elemental"). Por ejemplo, esto podría ser el obtener cara en un solo lanzamiento de moneda, sacar un 4 en un lanzamiento de dado, o tardar 21 minutos en llegar a casa en la nueva ruta.
 
 <!-- Now that we have those definitions, we can outline the formal features of a probability, which were first defined by the Russian mathematician Andrei Kolmogorov. These are the features that a value *has* to have if it is going to be a probability. Let's say that we have a sample space defined by N independent events, ${E_1, E_2, ... , E_N}$, and $X$ is a random variable denoting which of the events has ocurred.  $P(X=E_i)$ is the probability of event $i$: -->
 Ahora que tenemos estas definiciones, podemos delinear las características formales de una probabilidad, las cuales fueron primero definidas por el matemático ruso Andrei Kolmogorov. Estas son las características que *debe* tener un valor si va a ser una probabilidad. Digamos que tenemos un espacio muestral definido por N eventos independientes, ${E_1, E_2, ... , E_N}$, y $X$ es una variable aleatoria que denota cuál de los eventos ha ocurrido. $P(X=E_i)$ es la probabilidad del evento $i$:
@@ -54,7 +56,7 @@ $$
 \sum_{i=1}^N{P(X=E_i)} = P(X=E_1) + P(X=E_2) + ... + P(X=E_N) = 1
 $$
 <!-- This is interpreted as saying "Take all of the N elementary events, which we have labeled from 1 to N, and add up their probabilities. These must sum to one."  -->
-Esto se interpreta como "Toma todos los eventos elementales N, que hemos etiquetado desde 1 hasta N, y suma sus probabilidades. Estas deben sumar 1."
+Esto se interpreta como "Toma todos los eventos simples N, que hemos etiquetado desde 1 hasta N, y suma sus probabilidades. Estas deben sumar 1."
 <!-- - The probability of any individual event cannot be greater than one: $P(X=E_i)\le 1$.  This is implied by the previous point; since they must sum to one, and they can't be negative, then any particular probability cannot exceed one. -->
 - La probabilidad de cualquier evento individual no puede ser mayor a uno: $P(X=E_i)\le 1$. Esto es sugerido por el punto anterior; como deben de sumar uno, y no pueden ser números negativos, entonces cualquier probabilidad en particular no puede ser mayor a uno.
 
@@ -67,7 +69,7 @@ Ahora que sabemos lo que es la probabilidad, ¿cómo hacemos para realmente aver
 <!-- ### Personal belief -->
 ### Creencia personal 
 
-<!-- Let's say that I asked you what the probability was that Bernie Sanders would have won the 2016 presidential election if he had been the democratic nominee instead of Hilary Clinton?  We can't actually do the experiment to find the outcome. However, most people with knowledge of American politics would be willing to at least offer a guess at the probability of this event.  In many cases personal knowledge and/or opinion is the only guide we have determining the probability of an event, but this is not very scientifically satisfying. -->
+<!-- Let's say that I asked you what the probability was that Bernie Sanders would have won the 2016 presidential election if he had been the democratic nominee instead of Hillary Clinton?  We can't actually do the experiment to find the outcome. However, most people with knowledge of American politics would be willing to at least offer a guess at the probability of this event.  In many cases personal knowledge and/or opinion is the only guide we have determining the probability of an event, but this is not very scientifically satisfying. -->
 Digamos que te pregunto, ¿cuál hubiera sido la probabilidad de que Bernie Sanders hubiera ganado la elección presidencial de 2016 si él hubiera sido el candidato del partido demócrata en lugar de Hilary Clinton? No podemos realmente hacer el experimento para averiguar el resultado. Sin embargo, la mayoría de las personas con conocimiento de la política estadounidense estarían dispuestos por lo menos a tratar de dar una opinión sobre la probabilidad de este evento. En muchos casos el conocimiento personal y/u opinión es la única guía que tenemos para determinar la probabilidad de un evento, pero esto no es muy satisfactorio científicamente.
 
 <!-- ### Empirical frequency {#empirical-frequency} -->
@@ -163,7 +165,7 @@ Es poco probable que cualquiera de nosotros haya lanzado una moneda decenas de m
 La probabilidad clásica surgió del estudio de juegos de azar como los dados y las cartas. Un ejemplo famoso surgió del problema que se encontró un jugador francés que se conocía por el nombre de Chevalier de Méré. de Méré jugaba dos diferentes juegos de dados: En el primero él apostaba en la probabilidad de obtener por lo menos un seis en cuatro lanzamientos de un dado de seis lados, mientras que en el segundo juego apostaba en la probabilidad de obtener por lo menos un doble seis en 24 lanzamientos de dos dados. Él esperaba ganar dinero en ambos juegos, pero encontró que mientras que en promedio él ganaba dinero en el primer juego, realmente terminaba perdiendo dinero en promedio cuando jugaba el segundo juego muchas veces. Para entender esto buscó a su amigo, el matemático Blaise Pascal, quien es reconocido como uno de los fundadores de la teoría de probabilidad.
 
 <!-- How can we understand this question using probability theory?  In classical probability, we start with the assumption that all of the elementary events in the sample space are equally likely; that is, when you roll a die, each of the possible outcomes ({1,2,3,4,5,6}) is equally likely to occur.  (No loaded dice allowed!)  Given this, we can compute the probability of any individual outcome as one divided by the number of possible outcomes: -->
-¿Cómo podemos entender esta pregunta usando teoría de probabilidad? En probabilidad clásica, comenzamos con una suposición de que todos los eventos elementales en el espacio muestral son igualmente probables; esto es, cuando lanzas un dado, cada uno de los posibles resultados ({1,2,3,4,5,6}) es igualmente probable que ocurra. (¡No se permiten dados cargados (o manipulados)! Considerando esto, podemos calcular la probabilidad de cualquier resultado individual como un uno dividido entre el número de resultados posibles:
+¿Cómo podemos entender esta pregunta usando teoría de probabilidad? En probabilidad clásica, comenzamos con una suposición de que todos los eventos simples en el espacio muestral son igualmente probables; esto es, cuando lanzas un dado, cada uno de los posibles resultados ({1,2,3,4,5,6}) es igualmente probable que ocurra. (¡No se permiten dados cargados (o manipulados)! Considerando esto, podemos calcular la probabilidad de cualquier resultado individual como un uno dividido entre el número de resultados posibles:
 
 $$
 P(resultados_i) = \frac{1}{\text{número de resultados posibles}}
